duniverse/alcotest/test/e2e/alcotest/passing/empty_test_name.ml
let () =
  Alcotest.run __FILE__
    [ ("", [ Alcotest.test_case "1" `Quick (fun () -> ()) ]) ]
