duniverse/alcotest/test/e2e/alcotest/failing/empty_suite_name.ml
let () =
  Alcotest.run ""
    [ ("alpha", [ Alcotest.test_case "1" `Quick (fun () -> assert false) ]) ]
